package com.ivivisoft.state.template;

/**
 * Created by andy on 2017/5/8.
 */
public class ConcreteStateA implements  State{
    @Override
    public void handle(String simpleParameter) {

    }
}
