package com.ivivisoft.state.template;

import lombok.Setter;

/**
 * Created by andy on 2017/5/8.
 */
public class Context {
    @Setter
    private State state;

    public void request(String simpleParameter){

    }

}
