package com.ivivisoft.state.template;

/**
 * Created by andy on 2017/5/8.
 */
public interface State {
    void handle(String simpleParameter);
}
